docs/v13/fvtt_api_docs/modules/CONFIG.md
---
title: "CONFIG | Foundry Virtual Tabletop - API Documentation - Version 13"
url: "https://foundryvtt.com/api/modules/CONFIG.html"
category: "modules"
---

* [Foundry Virtual Tabletop - API Documentation - Version 13](../modules.html)
* [CONFIG](CONFIG.html)

# Module CONFIG

Runtime configuration settings for Foundry VTT which exposes a large number of variables which determine how
aspects of the software behaves.

Unlike the CONST analog which is frozen and immutable, the CONFIG object may be updated during the course of a
session or modified by system and module developers to adjust how the application behaves.

## Interfaces

[\_FontDefinition](../interfaces/CONFIG._FontDefinition.html)

[\_StatusEffectConfig](../interfaces/CONFIG._StatusEffectConfig.html)

[CursorDescriptor](../interfaces/CONFIG.CursorDescriptor.html)

[DiceFulfillmentConfiguration](../interfaces/CONFIG.DiceFulfillmentConfiguration.html)

[DiceFulfillmentDenomination](../interfaces/CONFIG.DiceFulfillmentDenomination.html)

[DiceFulfillmentMethod](../interfaces/CONFIG.DiceFulfillmentMethod.html)

[FontFamilyDefinition](../interfaces/CONFIG.FontFamilyDefinition.html)

[TextEditorEnricherConfig](../interfaces/CONFIG.TextEditorEnricherConfig.html)

[WallDoorAnimationConfig](../interfaces/CONFIG.WallDoorAnimationConfig.html)

[WallDoorSound](../interfaces/CONFIG.WallDoorSound.html)

[WeatherAmbienceConfiguration](../interfaces/CONFIG.WeatherAmbienceConfiguration.html)

[WeatherEffectConfiguration](../interfaces/CONFIG.WeatherEffectConfiguration.html)

## Type Aliases

[DarknessSourceAnimationConfig](../types/CONFIG.DarknessSourceAnimationConfig.html)

[DiceFulfillmentHandler](../types/CONFIG.DiceFulfillmentHandler.html)

[FontDefinition](../types/CONFIG.FontDefinition.html)

[LightSourceAnimationConfig](../types/CONFIG.LightSourceAnimationConfig.html)

[RollFunction](../types/CONFIG.RollFunction.html)

[StatusEffectConfig](../types/CONFIG.StatusEffectConfig.html)

[TextEditorEnricher](../types/CONFIG.TextEditorEnricher.html)

[WallDoorAnimationFunction](../types/CONFIG.WallDoorAnimationFunction.html)

[WallDoorAnimationHook](../types/CONFIG.WallDoorAnimationHook.html)

## Variables

[ActiveEffect](../variables/CONFIG.ActiveEffect.html)

[Actor](../variables/CONFIG.Actor.html)

[ActorDelta](../variables/CONFIG.ActorDelta.html)

[Adventure](../variables/CONFIG.Adventure.html)

[AmbientLight](../variables/CONFIG.AmbientLight.html)

[AmbientSound](../variables/CONFIG.AmbientSound.html)

[Canvas](../variables/CONFIG.Canvas.html)

[canvasTextStyle](../variables/CONFIG.canvasTextStyle.html)

[Card](../variables/CONFIG.Card.html)

[Cards](../variables/CONFIG.Cards.html)

[ChatMessage](../variables/CONFIG.ChatMessage.html)

[Combat](../variables/CONFIG.Combat.html)

[Combatant](../variables/CONFIG.Combatant.html)

[CombatantGroup](../variables/CONFIG.CombatantGroup.html)

[compatibility](../variables/CONFIG.compatibility.html)

[controlIcons](../variables/CONFIG.controlIcons.html)

[cursors](../variables/CONFIG.cursors.html)

[DatabaseBackend](../variables/CONFIG.DatabaseBackend.html)

[debug](../variables/CONFIG.debug.html)

[defaultFontFamily](../variables/CONFIG.defaultFontFamily.html)

[Dice](../variables/CONFIG.Dice.html)

[Drawing](../variables/CONFIG.Drawing.html)

[FogExploration](../variables/CONFIG.FogExploration.html)

[Folder](../variables/CONFIG.Folder.html)

[fontDefinitions](../variables/CONFIG.fontDefinitions.html)

[i18n](../variables/CONFIG.i18n.html)

[Item](../variables/CONFIG.Item.html)

[JournalEntry](../variables/CONFIG.JournalEntry.html)

[JournalEntryCategory](../variables/CONFIG.JournalEntryCategory.html)

[JournalEntryPage](../variables/CONFIG.JournalEntryPage.html)

[Macro](../variables/CONFIG.Macro.html)

[MeasuredTemplate](../variables/CONFIG.MeasuredTemplate.html)

[Note](../variables/CONFIG.Note.html)

[Playlist](../variables/CONFIG.Playlist.html)

[PlaylistSound](../variables/CONFIG.PlaylistSound.html)

[queries](../variables/CONFIG.queries.html)

[Region](../variables/CONFIG.Region.html)

[RegionBehavior](../variables/CONFIG.RegionBehavior.html)

[RollTable](../variables/CONFIG.RollTable.html)

[Scene](../variables/CONFIG.Scene.html)

[soundEffects](../variables/CONFIG.soundEffects.html)

[sounds](../variables/CONFIG.sounds.html)

[specialStatusEffects](../variables/CONFIG.specialStatusEffects.html)

[statusEffects](../variables/CONFIG.statusEffects.html)

[supportedLanguages](../variables/CONFIG.supportedLanguages.html)

[TableResult](../variables/CONFIG.TableResult.html)

[TextEditor](../variables/CONFIG.TextEditor.html)

[Tile](../variables/CONFIG.Tile.html)

[time](../variables/CONFIG.time.html)

[TinyMCE](../variables/CONFIG.TinyMCE.html)

[Token](../variables/CONFIG.Token.html)

[ui](../variables/CONFIG.ui.html)

[User](../variables/CONFIG.User.html)

[ux](../variables/CONFIG.ux.html)

[Wall](../variables/CONFIG.Wall.html)

[weatherEffects](../variables/CONFIG.weatherEffects.html)

[WebRTC](../variables/CONFIG.WebRTC.html)